--- a/etc/pacman.conf.in
+++ b/etc/pacman.conf.in
@@ -63,7 +63,7 @@ CheckSpace
 Server = http://downloads.devkitpro.org/packages
 
 [dkp-linux]
-Server = http://downloads.devkitpro.org/packages/linux
+Server = http://downloads.devkitpro.org/packages/linux/$arch/
 
 # An example of a disabled remote package repository with multiple servers
 # available. To enable, uncomment the following lines. You can add preferred
